Added button functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ScoutingMenu"></activity>
+        <activity android:name=".ScoutingMenu" />
+        <activity android:name=".DataUpload" />
+        <activity android:name=".addPhoto" />
+        <activity android:name=".teamsView" />
+        <activity android:name=".viewPhotos"></activity>
     </application>
 
 </manifest>
