--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 12 23:08:15 PST 2017
-sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
+#Fri Jan 13 15:41:41 PST 2017
+sdk.dir=C\:\\Users\\19isaacd740\\AppData\\Local\\Android\\Sdk
