--- a/local.properties
+++ b/local.properties
@@ -7,14 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< Updated upstream
-#Sat Jan 14 13:43:18 PST 2017
->>>>>>>=origin/master
+#Sat Jan 14 17:11:25 PST 2017
+>>>>>>>=Stashed changes
 sdk.dir=C\:\\Users\\19isaacd740\\AppData\\Local\\Android\\Sdk
-=======
-#Sat Jan 14 13:38:16 PST 2017
->>>>>>>=origin/master
-sdk.dir=/Users/cristinahernandez/Library/Android/sdk
->>>>>>> Stashed changes
 =\=\=\=\=\=\=
 <<<<<<<=Updated upstream
