--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 14 17:11:25 PST 2017
+#Sat Jan 14 18:38:07 PST 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\19isaacd740\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=/Users/cristinahernandez/Library/Android/sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
