--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
 
         <activity android:name=".PictureList" />
         <activity android:name=".UploadPicture" />
-        <activity android:name=".TeamPictureSelection"></activity>
+        <activity android:name=".TeamPictureSelection" />
+        <activity android:name=".TeamRoster"></activity>
     </application>
 
 </manifest>
