--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 14 21:39:53 PST 2017
+#Sun Jan 15 19:28:05 PST 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
-=\=\=\=\=\=\=
+sdk.dir=/Users/cristinahernandez/Library/Android/sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
