--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 15 19:28:05 PST 2017
+#Wed Jan 18 16:22:14 PST 2017
 >>>>>>>=Stashed changes
-sdk.dir=/Users/cristinahernandez/Library/Android/sdk
-<<<<<<<=Updated upstream
+sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
 =\=\=\=\=\=\=
+<<<<<<<=Updated upstream
