--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 18 17:14:04 PST 2017
+#Wed Jan 18 17:22:04 PST 2017
 >>>>>>>=Stashed changes
-sdk.dir=/Users/cristinahernandez/Library/Android/sdk
-<<<<<<<=Updated upstream
+sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
 =\=\=\=\=\=\=
+<<<<<<<=Updated upstream
