--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 26 18:09:09 PST 2017
+#Thu Mar 16 18:11:51 PDT 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
-=\=\=\=\=\=\=
+sdk.dir=/Users/cristinahernandez/Library/Android/sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
