--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 16 18:11:51 PDT 2017
+#Sat Mar 18 15:42:07 PDT 2017
 >>>>>>>=Stashed changes
-sdk.dir=/Users/cristinahernandez/Library/Android/sdk
-<<<<<<<=Updated upstream
+sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
 =\=\=\=\=\=\=
+<<<<<<<=Updated upstream
