--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 18 15:42:07 PDT 2017
+#Sat Mar 18 19:00:15 PDT 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
-=\=\=\=\=\=\=
+sdk.dir=/Users/cristinahernandez/Library/Android/sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
