--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 27 17:44:45 PDT 2017
+#Mon Mar 27 18:27:44 PDT 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\18julianh917\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
