Revert "Changes to layout"
This reverts commit dcae833be16bbbef31b3660acf2fd8810acc09fc.

--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 27 18:27:44 PDT 2017
+#Mon Mar 27 19:50:37 PDT 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
-<<<<<<<=Updated upstream
+sdk.dir=C\:\\Users\\18julianh917\\AppData\\Local\\Android\\Sdk
 =\=\=\=\=\=\=
+<<<<<<<=Updated upstream
