--- a/local.properties
+++ b/local.properties
@@ -7,12 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Mon Mar 27 19:50:37 PDT 2017
-=======
-#Mon Mar 27 19:51:35 PDT 2017
->>>>>>> origin/master
+#Tue Mar 28 20:20:14 PDT 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\18julianh917\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
 =\=\=\=\=\=\=
 <<<<<<<=Updated upstream
