--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 28 20:20:14 PDT 2017
+#Wed Mar 29 17:53:26 PDT 2017
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\Pollo\\AppData\\Local\\Android\\sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\18julianh917\\AppData\\Local\\Android\\Sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
