--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
 
     compile 'com.android.support:design:22.2.0'
+    compile 'com.android.volley:volley:1.0.0'
 }
